# home-assistant

./: .env.example  .gitignore  README.md  TODO.md  assistant.py  audio.py  history_store.py  main.py  pyproject.toml  transcribe.py  tts.py  wake_word.py
.claude/commands/: prime.md
.claude/skills/image-gen/image_gen_cli/src/: main.py
docs/: spotify-tool-design.md
spotify/: __init__.py  auth.py  client.py  setup.py
tests/: conftest.py  test_spotify.py  test_tools_live.py
tools/: __init__.py  base.py  device_volume.py  history.py  news.py  search.py  spotify.py  time.py  timer.py  weather.py
wakewords/: hey_aero.onnx  hey_aero.tflite
