[project]
name = "home-assistant"
version = "0.1.0"
description = "Voice assistant with wake word detection, speech-to-text, and LLM-powered responses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "openwakeword>=0.6.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "setuptools",
    "python-dotenv",
    "pydantic>=2.12.5",
    "httpx>=0.27.0",
]

[project.scripts]
weather = "tools.weather:main"
news = "tools.news:main"
search = "tools.search:main"
volume = "tools.device_volume:main"
history = "tools.history:main"
spotify = "tools.spotify:main"
spotify-auth = "spotify.setup:main"

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "spotify"]
include = [
    "*.py",
    "tools/**/*.py",
    "spotify/**/*.py",
]
